// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test case files parses Sample.java (java) 1`] = `
{
  "comments": [
    "// import from another package",
    "// import from our own package",
    "/**
   * Sample is a class
   */",
    "// this is a comment",
    "// these are all globals that should not be considered",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "Sample",
      "sourceLocation": [
        367,
        372,
      ],
      "type": "typeIdentifier",
    },
    {
      "isLibraryName": false,
      "name": "get_annual_income_deduction",
      "sourceLocation": [
        424,
        450,
      ],
      "type": "methodDeclarator",
    },
    {
      "isLibraryName": false,
      "name": "a",
      "sourceLocation": [
        464,
        464,
      ],
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "b",
      "sourceLocation": [
        479,
        479,
      ],
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "employees",
      "sourceLocation": [
        496,
        504,
      ],
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "paye_tax_bracket",
      "sourceLocation": [
        606,
        621,
      ],
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "get_payslip_for_paye",
      "sourceLocation": [
        651,
        670,
      ],
      "type": "methodDeclarator",
    },
    {
      "isLibraryName": false,
      "name": "arg1",
      "sourceLocation": [
        676,
        679,
      ],
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "arg2",
      "sourceLocation": [
        689,
        692,
      ],
      "type": "variableDeclaratorId",
    },
    {
      "isLibraryName": false,
      "name": "spreadArguments",
      "sourceLocation": [
        702,
        716,
      ],
      "type": "variableArityParameter",
    },
    {
      "isLibraryName": false,
      "name": "MyEnum",
      "sourceLocation": [
        847,
        852,
      ],
      "type": "typeIdentifier",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_1",
      "sourceLocation": [
        860,
        872,
      ],
      "type": "enumConstant",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_2",
      "sourceLocation": [
        879,
        891,
      ],
      "type": "enumConstant",
    },
    {
      "isLibraryName": false,
      "name": "MyIFace",
      "sourceLocation": [
        911,
        917,
      ],
      "type": "typeIdentifier",
    },
    {
      "isLibraryName": false,
      "name": "myInterfaceProperty",
      "sourceLocation": [
        929,
        947,
      ],
      "type": "variableDeclaratorId",
    },
  ],
  "imports": {
    "named": {
      "ArrayList": {
        "isLibraryFile": true,
        "originalName": "ArrayList",
        "source": "java.util",
      },
      "List": {
        "isLibraryFile": true,
        "originalName": "List",
        "source": "java.util",
      },
      "SmartCardReader": {
        "isLibraryFile": false,
        "originalName": "SmartCardReader",
        "source": "nz.school.app.cordovaSmartCardPlugin",
      },
      "Whatever": {
        "isLibraryFile": false,
        "originalName": "Whatever",
        "source": "parsers.languages",
      },
    },
    "wildcard": [
      {
        "isLibraryFile": true,
        "source": "java.beans",
      },
      {
        "isLibraryFile": false,
        "source": "nz.school.app.cordovaGeoLocationPlugin",
      },
      {
        "isLibraryFile": false,
        "source": "parsers.languages",
      },
    ],
  },
}
`;

exports[`test case files parses complex.py (python) 1`] = `
{
  "comments": [
    "
This is a block comment in the middle of nowhere

it has a fake # inline comment within the block

",
    "block comment above func - this is not valid",
    "block comment within func",
    "# comment on the same line as the block end",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "identifier1",
      "sourceLocation": [
        211,
        222,
      ],
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "identifier2",
      "sourceLocation": [
        264,
        275,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "identifier3",
      "sourceLocation": [
        292,
        303,
      ],
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "tripleQuotedString",
      "sourceLocation": [
        318,
        336,
      ],
      "type": "VariableDeclarator.ownId",
    },
  ],
  "imports": {
    "named": {},
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.as (javascript) 1`] = `
{
  "comments": [
    " eslint-disable ",
    " @ts-nocheck -- this is a sample file, not part of the sourcecode",
    " an inline comment",
    " these are all globals that should not be considered",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "a",
      "sourceLocation": [
        103,
        104,
      ],
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "b",
      "sourceLocation": [
        106,
        107,
      ],
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "add",
      "sourceLocation": [
        99,
        102,
      ],
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "x",
      "sourceLocation": [
        160,
        161,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "y",
      "sourceLocation": [
        171,
        172,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "z",
      "sourceLocation": [
        182,
        183,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "myCustomAttribute",
      "sourceLocation": [
        197,
        214,
      ],
      "type": "MemberExpression.property",
    },
    {
      "isLibraryName": false,
      "name": "SomeClass",
      "sourceLocation": [
        228,
        237,
      ],
      "type": "ClassDeclaration.ownId",
    },
  ],
  "imports": {
    "named": {},
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.js (javascript) 1`] = `
{
  "comments": [
    " eslint-disable ",
    " @ts-nocheck -- this is a sample file, not part of the sourcecode",
    "*
 * comments yay
 * @param {number} a
 * @param {number} b
 ",
    " an inline comment",
    " these are all globals that should not be considered",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "a",
      "sourceLocation": [
        560,
        561,
      ],
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "b",
      "sourceLocation": [
        563,
        564,
      ],
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "add",
      "sourceLocation": [
        556,
        559,
      ],
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "x",
      "sourceLocation": [
        617,
        618,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "y",
      "sourceLocation": [
        628,
        629,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "z",
      "sourceLocation": [
        639,
        640,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "myCustomAttribute",
      "sourceLocation": [
        654,
        671,
      ],
      "type": "MemberExpression.property",
    },
    {
      "isLibraryName": false,
      "name": "SomeClass",
      "sourceLocation": [
        685,
        694,
      ],
      "type": "ClassDeclaration.ownId",
    },
  ],
  "imports": {
    "named": {
      "defaultImport": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile.js",
      },
      "defaultImport2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "json": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./foo.json",
      },
      "named1": {
        "isLibraryFile": false,
        "originalName": "named1",
        "source": "./someFile",
      },
      "named2": {
        "isLibraryFile": false,
        "originalName": "named2",
        "source": "./someFile",
      },
      "named3": {
        "isLibraryFile": false,
        "originalName": "named3",
        "source": "./someFile.ts",
      },
      "named5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "renamed4": {
        "isLibraryFile": false,
        "originalName": "named4",
        "source": "./someFile.ts",
      },
      "renamed5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "renamedDefault": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "renamedDefault2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
    },
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.md (md) 1`] = `
{
  "comments": [
    "# Sample Documentation

This is a sample markdown file, which serves as documentation for SAAAP (Sample Acronym and Abbreviation Parser).

Some abbreivations are less straightforward, like COM (communication port) or starboard (STBD).

Abbreviations might also exist in lists:

- VTS: Vessel Traffic Services
- AIS ( Automatic Identification System )
- UTC: Universal Coordinated Time
- European Train Control System (ETCS)
- COSPAS-SARSAT (Cosmicheskaya Sistema Poiska Avariynyh Sudov - Search And Rescue Satellite-Aided Tracking)
",
  ],
  "identifiers": [],
  "imports": {
    "named": {},
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.py (python) 1`] = `
{
  "comments": [
    "
Hiii
",
    "
    does nothing
    ",
    "# inline commenttt",
    "# these are all globals that should not be considered",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "x",
      "sourceLocation": [
        28,
        29,
      ],
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "y",
      "sourceLocation": [
        31,
        32,
      ],
      "type": "FunctionDeclaration.argument",
    },
    {
      "isLibraryName": false,
      "name": "subtract",
      "sourceLocation": [
        19,
        27,
      ],
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "a",
      "sourceLocation": [
        74,
        75,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "OOP",
      "sourceLocation": [
        88,
        91,
      ],
      "type": "FunctionDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "doSomething",
      "sourceLocation": [
        135,
        146,
      ],
      "type": "MemberExpression.property",
    },
    {
      "isLibraryName": false,
      "name": "str1",
      "sourceLocation": [
        169,
        173,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "str2",
      "sourceLocation": [
        228,
        232,
      ],
      "type": "VariableDeclarator.ownId",
    },
  ],
  "imports": {
    "named": {},
    "wildcard": [],
  },
}
`;

exports[`test case files parses sample.ts (javascript) 1`] = `
{
  "comments": [
    " eslint-disable ",
    " @ts-nocheck -- this is a sample file, not part of the sourcecode",
    " extra: TS only",
    "* a comment  ",
    " another comment",
    " these are all globals that should not be considered",
  ],
  "identifiers": [
    {
      "isLibraryName": false,
      "name": "x",
      "sourceLocation": [
        769,
        770,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "y",
      "sourceLocation": [
        780,
        781,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "z",
      "sourceLocation": [
        791,
        792,
      ],
      "type": "VariableDeclarator.ownId",
    },
    {
      "isLibraryName": false,
      "name": "myCustomAttribute",
      "sourceLocation": [
        806,
        823,
      ],
      "type": "MemberExpression.property",
    },
    {
      "isLibraryName": false,
      "name": "SomeClass",
      "sourceLocation": [
        837,
        846,
      ],
      "type": "ClassDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "MyIFace",
      "sourceLocation": [
        861,
        868,
      ],
      "type": "TSInterfaceDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "MyType",
      "sourceLocation": [
        878,
        884,
      ],
      "type": "TSTypeAliasDeclaration.ownId",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_1",
      "sourceLocation": [
        908,
        921,
      ],
      "type": "TSEnumMember.ownId",
    },
    {
      "isLibraryName": false,
      "name": "ENUM_MEMBER_2",
      "sourceLocation": [
        925,
        938,
      ],
      "type": "TSEnumMember.ownId",
    },
    {
      "isLibraryName": false,
      "name": "MyEnum",
      "sourceLocation": [
        897,
        903,
      ],
      "type": "TSEnumDeclaration.ownId",
    },
  ],
  "imports": {
    "named": {
      "Type1": {
        "isLibraryFile": false,
        "originalName": "Type1",
        "source": "./someFile",
      },
      "Type2": {
        "isLibraryFile": false,
        "originalName": "Type2",
        "source": "./someFile",
      },
      "Type3": {
        "isLibraryFile": false,
        "originalName": "Type3",
        "source": "./someFile",
      },
      "defaultImport": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile.js",
      },
      "defaultImport2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "defaultWithType": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "defaultWithType2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "json": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./foo.json",
      },
      "named1": {
        "isLibraryFile": false,
        "originalName": "named1",
        "source": "./someFile",
      },
      "named2": {
        "isLibraryFile": false,
        "originalName": "named2",
        "source": "./someFile",
      },
      "named3": {
        "isLibraryFile": false,
        "originalName": "named3",
        "source": "./someFile.ts",
      },
      "named5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "named6": {
        "isLibraryFile": false,
        "originalName": "named6",
        "source": "./someFile",
      },
      "renamed4": {
        "isLibraryFile": false,
        "originalName": "named4",
        "source": "./someFile.ts",
      },
      "renamed5": {
        "isLibraryFile": false,
        "originalName": "named5",
        "source": "./someFile",
      },
      "renamedDefault": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
      "renamedDefault2": {
        "isLibraryFile": false,
        "originalName": "default",
        "source": "./someFile",
      },
    },
    "wildcard": [],
  },
}
`;
